[workspace]
resolver = "3"
members = ["primitives", "preview"]

[workspace.dependencies]
dioxus-primitives = { path = "primitives" }

dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
tracing = { version = "0.1", features = ["std"] }

[patch.crates-io]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus" }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# Same as in the Stable section
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
